<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context="com.android.line.activity.Index">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal" >



        <RadioButton
            android:id="@+id/tab_one"
            style="@style/style_radiobutton_list"
            android:background="@color/white"
            android:checked="true"

            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:textSize="@dimen/text_size_level5"
            android:text="@string/menu_first_page" />

        <RadioButton
            android:id="@+id/tab_two"
            style="@style/style_radiobutton_list"
            android:background="@color/white"

            android:paddingBottom="3dp"
            android:textSize="@dimen/text_size_level3"
            android:paddingTop="3dp"
            android:text="@string/menu_find_goods"
            android:checked="false" />



        <RadioButton
            android:textSize="@dimen/text_size_level5"
            android:id="@+id/tab_five"
            style="@style/style_radiobutton_list"
            android:background="@color/white"

            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/menu_person" />


    </RadioGroup>
</LinearLayout>
</RelativeLayout>
